--- a/Website2/index.html
+++ b/Website2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <div class="contanier">
+        <div class="container">
             <div class="header">
                 <div class="logogo">
                     <a href="#">Logo</a>
@@ -21,13 +21,24 @@
                 </nav>
             </div>
             <section>
-                <div class="contnets">
-                    
+                <div class="contents">
+                    <h1>NoBuling</h1>
                 </div>
             </section>
+            <footer>
+                <a href="#">1</a>
+            </footer>
         </div>
         <div class="right">
-
+            <img src="images/pick.png" alt="">
+        </div>
+        <div class="box">
+            <div class="mibox">
+                <div class="shbox">
+                    <p>BOOK YOUR STAY</p>
+                </div>
+                <p>Aesthetics and harmony of your soul</p>
+            </div>
         </div>
     </main>
 </body>
