--- a/Website2/index.html
+++ b/Website2/index.html
@@ -30,16 +30,16 @@
             </footer>
         </div>
         <div class="right">
-            <img src="images/pick.png" alt="">
-            <div class="mibox">
-                <div class="shbox">
-                    <p>BOOK YOUR STAY</p>
+            <div class="box">
+                <div class="mibox">
+                    <div class="shbox">
+                        <p>BOOK YOUR STAY</p>
+                    </div>
+                    <p>Aesthetics and  <br> harmony of your <br> soul</p>
                 </div>
-                <p>Aesthetics and harmony of your soul</p>
             </div>
+            <img src="images/pick.png" alt="">
         </div>
-        </div>
-        <div class="box">
     </main>
 </body>
 </html>
