--- a/Website3/index.html
+++ b/Website3/index.html
@@ -6,94 +6,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<style>
-    * {
-    margin: 0 auto;
-    padding: 0;
-}
-
-.body {
-    width: 1440px;
-    height: 765px;
-}
-
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-.imgs {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
-header {
-    width: 100%;
-    height: 100px;
-    /* background-color:lightgoldenrodyellow; */
-    display: flex;
-    position: relative;
-    z-index: 1;
-}
-
-.logo {
-    width: 100%;
-    height: 100px;
-    /* background-color: lightcoral; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: gray;
-}
-
-.logo > a:nth-child(1) {
-    font-size: 24px;
-    color: #fff;
-    font-weight: 900
-}
-
-.logo > a:nth-child(3) {
-    font-size: 24px;
-    color: #fff;
-    font-weight: 900
-}
-
-.logo > button {
-    width: 150px;
-    height: 45px;
-    border-radius: 15px;
-    background-color: transparent;
-    border-color: #fff;
-    color: #fff;
-    font-size: 15px;
-    font-weight: 600;
-}
-
-/* main */
-
-main {
-    position: relative;
-    width: 500px;
-    height: 500px;
-    background-color: lightgreen;
-    display: flex;
-    z-index: 1;
-    float: left
-}
-
-.contents {
-    width: 500px;
-    height: 500px;
-    background-color: lightskyblue;
-    display: flex;
-    align-items: center;
-}
-</style>
+    <!-- <style>
+        
+    </style> -->
     <div class="imgs">
         <img src="images/camera.png" alt="이미지">
     </div>
