--- a/Website4/index.html
+++ b/Website4/index.html
@@ -7,36 +7,55 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <style></style> -->
+    <!-- <style>
+
+    </style> -->
     <main>
         <section>
             <header>
                 <div class="logo">
                     <a href="#">Logo</a>
                 </div>
-                <ul>
-                    <li>Home</li>
-                    <li>Key Features</li>
-                    <li>Pricing</li>
-                    <li>Testiminial</li>
-                    <li>FAQ</li>
-                </ul>
+                <nav>
+                    <ul>
+                        <li>Home</li>
+                        <li>Key Features</li>
+                        <li>Pricing</li>
+                        <li>Testiminial</li>
+                        <li>FAQ</li>
+                    </ul>
+                </nav>
                 <div class="log">
                     <button>Log in</button>
                     <button>Sign up</button>
                 </div>
             </header>
-            <nav>
-                <div class="nav1">
+            <div class="content">
+                <div class="num">
                     <p>01</p>
                     <p>02</p>
                 </div>
-            </nav>
-            <div class="nav2">
-                <h1>FASTEST GROWING <br>
-                CORPORATE CARD
-                </h1>
-                <p>The most hype generration payment</p>
+                <div class="conarea">
+                    <div class="text">
+                        <h1>FASTEST GROWING <br>
+                            CORPORATE CARD
+                            </h1>
+                            <p>The most hype generration payment</p>
+                            <div class="btn">
+                                <input type="text" placeholder="Your email">
+                                <button>Get Started -></button>
+                            </div>
+                            <div class="text2">
+                                <p>Bankk Accounts and Cards <br>All financial Details will be encrypted</p>
+                                <div class="cardBox">
+                                    <div class="card1s">
+                                        <p>visa</p>
+                                        <p>Master card</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
