--- a/Website5/index.html
+++ b/Website5/index.html
@@ -8,25 +8,27 @@
 </head>
 <body>
     <div class="mainBox">
-        <div class="sebox">
+        <div class="Box">
             <nav>
                 <ul>
                     <li>Features</li>
-                    <li>Screenshot</li>
+                    <li>ScreenShot</li>
                     <li>Partners</li>
                     <li>About</li>
                 </ul>
             </nav>
-        <main>
             <div class="contents">
-                <div class="con1">
-                    <p>Interfaces that made <br>
-                        the technology Natural
-                        </p>
-                        <p>Revolutionary technology,simple,and intuitive interfaces.</p>
+                <div class="textBox">
+                    <p class="text1">Interfaces that made <br>
+                        the technology Nautural
+                    </p>
+                    <p class="text2">Revolutionary technology,simple,and intuitive interfaces.</p>
+                    <div class="btn">
+                        
+                        <button><img src="images/aplle-removebg-preview.png" alt="">Download for free</button>
                     </div>
                 </div>
-        </main>
+            </div>
         </div>
     </div>
 </body>
