--- a/list-Web/index3.html
+++ b/list-Web/index3.html
@@ -22,5 +22,13 @@
             <button>Get Started</button>
         </div>
     </header>
+    <div class="window">
+        <div class="slide">
+            <div style="background-color: lightblue;"></div>
+            <div style="background-color: lightcyan;"></div>
+            <div style="background-color: lightgray;"></div>
+            <div style="background-color: lightblue;"></div>
+        </div>
+    </div>
 </body>
 </html>
