--- a/SlideWebsite/index.html
+++ b/SlideWebsite/index.html
@@ -29,5 +29,16 @@
             <div style="background-color: aquamarine;"></div>
         </div>
     </div>
+    <footer>
+            <div class="Downmenu">
+                MENU
+            </div>
+            <div class="copyright">
+                copyright
+            </div>
+            <div class="family">
+                Familysite
+            </div>
+    </footer>
 </body>
 </html>
