--- a/Website-GD/index.html
+++ b/Website-GD/index.html
@@ -42,6 +42,7 @@
                         </p>
                         <p>청정 제주 숲에서 온 유기농º천연 원료의 깨끗함과 순수함을 담아 당신의 피부에 자연스러운 아름다움을 <br>
                             전해드리겠습니다. 자연과 환경, 사람이 함께 공존하는 큰 철학을 실현하고자 하는 루트리의 정직한 이야기는 계속됩니다.</p>
+                        <button>하이 나 버튼</button>
                     </div>
                 </div>
 </body>
