--- a/Double-Slide/index.html
+++ b/Double-Slide/index.html
@@ -9,12 +9,10 @@
 <body>
     <div class="window">
         <div class="slide">
-            <div style="background-color: aquamarine;">1</div>
-            <div style="background-color: lightcoral;">2</div>
-            <div style="background-color: aquamarine;">1</div>
-            <div style="background-color: lightcoral;">2</div>
-            <!-- <div style="background-color: aquamarine;">1</div> -->
-            <!-- <div style="background-color: lightcoral;">2</div>             -->
+            <div style="background-color: antiquewhite;"></div>
+            <div style="background-color: lightgray;"></div>
+            <div style="background-color: antiquewhite;"></div>
+            <div style="background-color: lightgray;"></div>
         </div>
     </div>
 </body>
