Feat: nuribom slide

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -27,6 +27,15 @@
                 <img src="images/chok-removebg-preview.png" alt="">
             </div>
         </header>
+        <div class="container">
+            <div class="window">
+                <div class="slide">
+                    <img src="images/main_sl_bg1.jpg" alt="">
+                    <img src="images/main_sl_bg2.jpg" alt="">
+                    <img src="images/main_sl_bg1.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
