Feat: DropDownbar-spool

--- a/Dropdown-menubar/index.html
+++ b/Dropdown-menubar/index.html
@@ -3,61 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li>
-        <a href="#">MENU1</a>
-        <ul class="submenu">
-            <li><a href="#">submenu01</a></li>
-            <li><a href="#">submenu02</a></li>
-            <li><a href="#">submenu03</a></li>
-            <li><a href="#">submenu04</a></li>
-            <li><a href="#">submenu05</a></li>
-        </ul>
-        </li>
-        <li>
-        <a href="#">MENU2</a>
-        <ul class="submenu">
-            <li><a href="#">submenu01</a></li>
-            <li><a href="#">submenu02</a></li>
-            <li><a href="#">submenu03</a></li>
-            <li><a href="#">submenu04</a></li>
-            <li><a href="#">submenu05</a></li>
-        </ul>
-        </li>
-        <li>
-        <a href="#">MENU3</a>
-        <ul class="submenu">
-            <li><a href="#">submenu01</a></li>
-            <li><a href="#">submenu02</a></li>
-            <li><a href="#">submenu03</a></li>
-            <li><a href="#">submenu04</a></li>
-            <li><a href="#">submenu05</a></li>
-        </ul>
-        </li>
-        <li>
-        <a href="#">MENU4</a>
-        <ul class="submenu">
-            <li><a href="#">submenu01</a></li>
-            <li><a href="#">submenu02</a></li>
-            <li><a href="#">submenu03</a></li>
-            <li><a href="#">submenu04</a></li>
-            <li><a href="#">submenu05</a></li>
-        </ul>
-        </li>
-        <li>
-        <a href="#">MENU5</a>
-        <ul class="submenu">
-            <li><a href="#">submenu01</a></li>
-            <li><a href="#">submenu02</a></li>
-            <li><a href="#">submenu03</a></li>
-            <li><a href="#">submenu04</a></li>
-            <li><a href="#">submenu05</a></li>
-        </ul>
-        </li>
-    </ul>
+    <!-- <style>
+        
+    </style> -->
+    <header>
+        <div class="menu">
+            <ul class="submenu">
+                <a href="#" class="menubtn">MENU1</a>
+                <li><a href="#">MENU1</a></li>
+                <li><a href="#">MENU2</a></li>
+                <li><a href="#">MENU3</a></li>
+                <li><a href="#">MENU4</a></li>
+            </ul>
+            <ul class="submenu">
+                <a href="#" class="menubtn">MENU2</a>
+                <li><a href="#">MENU1</a></li>
+                <li><a href="#">MENU2</a></li>
+                <li><a href="#">MENU3</a></li>
+                <li><a href="#">MENU4</a></li>
+            </ul>
+            <ul class="submenu">
+                <a href="#" class="menubtn">MENU3</a>
+                <li><a href="#">MENU1</a></li>
+                <li><a href="#">MENU2</a></li>
+                <li><a href="#">MENU3</a></li>
+                <li><a href="#">MENU4</a></li>
+            </ul>
+            <ul class="submenu">
+                <a href="#" class="menubtn">MENU4</a>
+                <li><a href="#">MENU1</a></li>
+                <li><a href="#">MENU2</a></li>
+                <li><a href="#">MENU3</a></li>
+                <li><a href="#">MENU4</a></li>
+            </ul>
+        </div>
+    </header>
 </body>
 </html>
