--- a/Dropdown-menubar/index.html
+++ b/Dropdown-menubar/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="utf-8" />
+<title>HTML/CSS 드롭다운메뉴</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <style>
-        
-    </style> -->
-    <header>
-        <div class="menu">
-            <ul class="submenu">
-                <a href="#" class="menubtn">MENU1</a>
-                <li><a href="#">MENU1</a></li>
-                <li><a href="#">MENU2</a></li>
-                <li><a href="#">MENU3</a></li>
-                <li><a href="#">MENU4</a></li>
-            </ul>
-            <ul class="submenu">
-                <a href="#" class="menubtn">MENU2</a>
-                <li><a href="#">MENU1</a></li>
-                <li><a href="#">MENU2</a></li>
-                <li><a href="#">MENU3</a></li>
-                <li><a href="#">MENU4</a></li>
-            </ul>
-            <ul class="submenu">
-                <a href="#" class="menubtn">MENU3</a>
-                <li><a href="#">MENU1</a></li>
-                <li><a href="#">MENU2</a></li>
-                <li><a href="#">MENU3</a></li>
-                <li><a href="#">MENU4</a></li>
-            </ul>
-            <ul class="submenu">
-                <a href="#" class="menubtn">MENU4</a>
-                <li><a href="#">MENU1</a></li>
-                <li><a href="#">MENU2</a></li>
-                <li><a href="#">MENU3</a></li>
-                <li><a href="#">MENU4</a></li>
-            </ul>
-        </div>
-    </header>
+<div id="menu">
+	<ul>
+		<li><a href="#">MENU1</a>
+			<ul>
+				<li><a href="#">SUB_MENU</a></li>
+				<li><a href="#">SUB_MENU2</a></li>
+				<li><a href="#">SUB_MENU3</a></li>
+			</ul>
+		</li>
+		<li><a href="#">MENU2</a>
+			<ul>
+				<li><a href="#">SUB_MENU</a></li>
+				<li><a href="#">SUB_MENU2</a></li>
+				<li><a href="#">SUB_MENU3</a></li>
+			</ul>
+		</li>
+		<li><a href="#">MENU3</a>
+			<ul>
+				<li><a href="#">SUB_MENU</a></li>
+				<li><a href="#">SUB_MENU2</a></li>
+				<li><a href="#">SUB_MENU3</a></li>
+			</ul>
+		</li>
+		<li><a href="#">MENU4</a>
+			<ul>
+				<li><a href="#">SUB_MENU</a></li>
+				<li><a href="#">SUB_MENU2</a></li>
+				<li><a href="#">SUB_MENU3</a></li>
+			</ul>
+		</li>
+		<li><a href="#">MENU5</a>
+			<ul>
+				<li><a href="#">SUB_MENU</a></li>
+				<li><a href="#">SUB_MENU2</a></li>
+				<li><a href="#">SUB_MENU3</a></li>
+			</ul>
+		</li>
+	</ul>
+</div>
 </body>
 </html>
