--- a/Website3/index.html
+++ b/Website3/index.html
@@ -14,26 +14,34 @@
     </div>
 <body>
     <div class="body">
-        <header>
-            <div class="logo">
-                <a href="#">Teamjo</a>
-                <div class="block"></div>
-                <a href="#">Home</a>
-                <a href="#">Bids</a>
-                <a href="#">Creators</a>
-                <a href="#">About</a>
-                <button>Sign in</button>
-            </div>
-        </header>
-        <main>
-            <div class="contents">
-                <h1>The end of our <br> design
-                    is the camera</h1>
-                    <p>Looking at the world <br>
-                    from a new perspective <br>
-                    our eyes are waiting for you</p>
-            </div>
-        </main>
+        <div class="head">
+            <header>
+                <div class="logo">
+                    <a href="#">Teamjo</a>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Lens</a></li>
+                        <li><a href="#">Creators</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+                <div class="btn">
+                    <button>Login</button>
+                    <button>Sign in</button>
+                </div>
+            </header>
+            <main>
+                <div class="contents">
+                    <h1>The end of our <br> design
+                        is the camera</h1>
+                        <p>Looking at the world <br>
+                        from a new perspective <br>
+                        our eyes are waiting for you</p>
+                </div>
+            </main>
+        </div>
     </div>
 </body>
 </html>
