--- a/kakao/index.html
+++ b/kakao/index.html
@@ -26,7 +26,7 @@
         </div>
     </header>
     <div class="contetns">
-        <img src="" alt="">
+        <img src="images/" alt="">
     </div>
 </body>
 </html>
