--- a/kakao/index.html
+++ b/kakao/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Kakao</title>
+    <!-- <style></style> -->
 </head>
 <body>
     <header>
@@ -26,7 +27,9 @@
         </div>
     </header>
     <div class="contetns">
-        <img src="images/" alt="">
+        <div class="box">
+            <img src="images/tiger.jpg" alt="">
+        </div>
     </div>
 </body>
 </html>
