--- a/kakao/index.html
+++ b/kakao/index.html
@@ -31,5 +31,21 @@
             <img src="images/tiger.jpg" alt="">
         </div>
     </div>
+    <div class="container">
+        <div class="conBox">
+            <div class="item1">
+                <h2>Connect <br> Solve. <br> Creat.</h2>
+            </div>
+        </div>
+        <div class="item2">
+
+        </div>
+        <div class="item3">
+
+        </div>
+        <div class="item4">
+            
+        </div>
+    </div>
 </body>
 </html>
