--- a/kakao/index.html
+++ b/kakao/index.html
@@ -38,7 +38,8 @@
                     <h2>Connect. <br> Solve. <br> Creat.</h2>
                 </div>
                 <div class="item2">
-    
+                    <p>2022년 상반기 글로벌 탑티어 AI 학회 논문 17건 등재</p>
+                    <img src="images/kakao.jpg" alt="">
                 </div>
                 <div class="item3">
         
