--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -4,38 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/logo.png">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <div class="body">
-        <header>
+    <header>
+        <div class="head">
             <div class="logo">
-                <a href="#"><img src="images/logo.png" alt=""></a>
+                <h1><a href="#">Wisdom Tech</a></h1>
             </div>
-            <nav>
-                <ul>
-                    <a href="#">회사소개</a>
-                    <a href="#">터치솔루션</a>
-                    <a href="#">모바일 어플리케이션 서비스</a>
-                    <a href="#">Contact us</a>
-                </ul>
-            </nav>
-            <div class="items">
-                <img src="images/naver.png" alt="">
-                <img src="images/youtube-removebg-preview.png" alt="">
-                <img src="images/chok-removebg-preview.png" alt="">
-            </div>
-        </header>
-        <div class="container">
-            <div class="window">
-                <div class="slide">
-                    <img src="images/main_sl_bg1.jpg" alt="">
-                    <img src="images/main_sl_bg2.jpg" alt="">
-                    <img src="images/main_sl_bg1.jpg" alt="">
+            <div class="inBox">
+                <input type="text" placeholder="Search">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                    <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
+                </svg>
+                </div>
+                <div class="headerBtn">
+                    <button>LOGIN</button>
+                    <button>REGISTER</button>
+                    <button>LANGUAGE</button>
                 </div>
             </div>
         </div>
-    </div>
+    </header>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
