Feat: nuribom-projcet

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -70,8 +70,10 @@
             </div>
         </div>
     </nav>
- <section>
-    
+    <section>
+        <div class="idiom">
+            <p>사자성어</p>
+        </div>
     </section>
 
 
