Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -70,11 +70,11 @@
             </div>
         </div>
     </nav>
-    <section>
+    <div class="con1">
         <div class="idiom">
             <p>사자성어</p>
         </div>
-    </section>
+    </div>
 
 
 
