Feat: nuribom-projcet

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -75,8 +75,11 @@
             <p>사자성어</p>
         </div>
     </div>
+    <div class="con2">
+        <div class="idiom-sub">
 
-
+        </div>
+    </div>
 
 
 
