Feat: nuribom-projcet

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -31,7 +31,7 @@
         <div class="items">
             <div class="itemBox1">
                 <div class="box1">
-                    <a href="#">1</a>
+                    <a href="#">성장 그래프</a>
                 </div>
                 
                 <div class="box2">
@@ -72,7 +72,9 @@
     </nav>
     <div class="con1">
         <div class="idiom">
+            <button><p><</p></button>
             <p>사자성어</p>
+            <button><p>></p></button>
         </div>
     </div>
     <div class="con2">
