Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -31,9 +31,18 @@
         <div class="items">
             <div class="itemBox1">
                 <div class="box1">
-                    <a href="#">성장 그래프</a>
+                    <label for="modal1" class="open">성장 그래프</label>
                 </div>
-                
+                <input type="checkbox" id="modal1">
+                <div class="modalb">
+                    <div class="box">
+                        <label for="modal1" id="close">닫기</label>
+                        <div class="stats">
+                            <h2>통계</h2>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="box2">
                     <a href="#">2</a>
                 </div>
