Feat: nuribom-project1

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -27,7 +27,7 @@
                 <input type="checkbox" id="modal9">
                 <label for="modal0" class="one">1번 버튼</label>
                 <div class="oneBox">
-                    <div class="Box1">
+                    <div class="close">
                         <label for="modal0">닫기</label>
                     </div>
                 </div>
@@ -38,21 +38,21 @@
                         <label for="modal1">닫기</label>
                     </div>
                 </div>
-                <label for="">ㅁㅇㄹ</label>
+                <label for="">3번 버튼</label>
 
-                <label for="">ㅁㄴㅇㄹ</label>
+                <label for="">4번 버튼</label>
 
-                <label for="">ㅁㅇㄴㄹ</label>
+                <label for="">5번 버튼</label>
 
-                <label for="">ㅁㄴㅇㄹ</label>
+                <label for="">6번 버튼</label>
 
-                <label for="">ㅁㅇㄹ</label>
+                <label for="">7번 버튼</label>
 
-                <label for="">ㅁㄴㅇㄹ</label>
+                <label for="">8번 버튼</label>
 
-                <label for="">ㅁㄹㅇ</label>
+                <label for="">9번 버튼</label>
 
-                <label for="">ㅁㄴㅇㄹ</label>
+                <label for="">10번 버튼</label>
 
 
             </div>
