Feat: nuribom-project1

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -34,26 +34,65 @@
 
                 <label for="modal1">2번 버튼</label>
                 <div class="twoBox">
-                    <div class="Box2">
+                    <div class="close">
                         <label for="modal1">닫기</label>
                     </div>
                 </div>
-                <label for="">3번 버튼</label>
+                <label for="modal2">3번 버튼</label>
+                <div class="ThrBox">
+                    <div class="close">
+                        <label for="modal2">닫기</label>
+                    </div>
+                </div>
 
-                <label for="">4번 버튼</label>
+                <label for="modal3">4번 버튼</label>
+                <div class="fouBox">
+                    <div class="close">
+                        <label for="modal3">닫기</label>
+                    </div>
 
-                <label for="">5번 버튼</label>
+                </div>
+                <label for="modal4">5번 버튼</label>
+                <div class="fivBox">
+                    <div class="close">
+                        <label for="modal4">닫기</label>
+                    </div>
+                </div>
 
-                <label for="">6번 버튼</label>
+                <label for="modal5">6번 버튼</label>
+                <div class="sixBox">
+                    <div class="close">
+                        <label for="modal5">닫기</label>
+                    </div>
+                </div>
+                
+                <label for="modal6">7번 버튼</label>
+                <div class="sevnBox">
+                    <div class="close">
+                        <label for="modal6">닫기</label>
+                    </div>
+                </div>
 
-                <label for="">7번 버튼</label>
+                <label for="modal7">8번 버튼</label>
+                <div class="eightBox">
+                    <div class="close">
+                        <label for="modal7">닫기</label>
+                    </div>
+                </div>
 
-                <label for="">8번 버튼</label>
+                <label for="modal8">9번 버튼</label>
+                <div class="nineBox">
+                    <div class="close">
+                        <label for="modal8">닫기</label>
+                    </div>
+                </div>
 
-                <label for="">9번 버튼</label>
-
-                <label for="">10번 버튼</label>
-
+                <label for="modal9">10번 버튼</label>
+                <div class="tenBox">
+                    <div class="close">
+                        <label for="modal9">닫기</label>
+                    </div>
+                </div>
 
             </div>
         </div>
