Feat: nuribom-project1

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="images/logo.png">
+    <title>누리봄 프로젝트</title>
+    <!-- <style></style> -->
 </head>
 <body>
     <header>
         <div class="logo">
-        <a href="#"><img src="images/logo.png" alt=""></a>
+        <a href="http://www.nuribom.com/default/"><img src="images/logo.png" alt=""></a>
         </div>
     </header>
     <div class="contetns">
@@ -32,62 +34,62 @@
                     </div>
                 </div>
 
-                <label for="modal1">2번 버튼</label>
+                <label for="modal1" class="two">2번 버튼</label>
                 <div class="twoBox">
                     <div class="close">
                         <label for="modal1">닫기</label>
                     </div>
                 </div>
-                <label for="modal2">3번 버튼</label>
+                <label for="modal2" class="thr">3번 버튼</label>
                 <div class="ThrBox">
                     <div class="close">
                         <label for="modal2">닫기</label>
                     </div>
                 </div>
 
-                <label for="modal3">4번 버튼</label>
+                <label for="modal3" class="fou">4번 버튼</label>
                 <div class="fouBox">
                     <div class="close">
                         <label for="modal3">닫기</label>
                     </div>
 
                 </div>
-                <label for="modal4">5번 버튼</label>
+                <label for="modal4" class="fiv">5번 버튼</label>
                 <div class="fivBox">
                     <div class="close">
                         <label for="modal4">닫기</label>
                     </div>
                 </div>
 
-                <label for="modal5">6번 버튼</label>
+                <label for="modal5" class="six">6번 버튼</label>
                 <div class="sixBox">
                     <div class="close">
                         <label for="modal5">닫기</label>
                     </div>
                 </div>
                 
-                <label for="modal6">7번 버튼</label>
+                <label for="modal6" class="sven">7번 버튼</label>
                 <div class="sevnBox">
                     <div class="close">
                         <label for="modal6">닫기</label>
                     </div>
                 </div>
 
-                <label for="modal7">8번 버튼</label>
+                <label for="modal7" class="eight">8번 버튼</label>
                 <div class="eightBox">
                     <div class="close">
                         <label for="modal7">닫기</label>
                     </div>
                 </div>
 
-                <label for="modal8">9번 버튼</label>
+                <label for="modal8" class="nine">9번 버튼</label>
                 <div class="nineBox">
                     <div class="close">
                         <label for="modal8">닫기</label>
                     </div>
                 </div>
 
-                <label for="modal9">10번 버튼</label>
+                <label for="modal9" class="ten">10번 버튼</label>
                 <div class="tenBox">
                     <div class="close">
                         <label for="modal9">닫기</label>
