Feat: nuribom-project1

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -40,20 +40,15 @@
                         <label for="modal1">닫기</label>
                     </div>
                 </div>
-                <label for="modal2" class="thr">3번 버튼</label>
-                <div class="ThrBox">
-                    <div class="close">
-                        <label for="modal2">닫기</label>
-                    </div>
+                
+                <div class="btn1">
+                    <button><a href="https://login.ecount.com/Login/">이카운트</a></button>
                 </div>
 
-                <label for="modal3" class="fou">4번 버튼</label>
-                <div class="fouBox">
-                    <div class="close">
-                        <label for="modal3">닫기</label>
-                    </div>
-
+                <div class="btn2">
+                    <button><a href="http://law.nuribom.com/">법규 검색</a></button>
                 </div>
+
                 <label for="modal4" class="fiv">5번 버튼</label>
                 <div class="fivBox">
                     <div class="close">
@@ -68,7 +63,7 @@
                     </div>
                 </div>
                 
-                <label for="modal6" class="sven">7번 버튼</label>
+                <label for="modal6" class="sevn">7번 버튼</label>
                 <div class="sevnBox">
                     <div class="close">
                         <label for="modal6">닫기</label>
