--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -31,6 +31,25 @@
                 <div class="oneBox">
                     <div class="close">
                         <label for="modal0">닫기</label>
+                        <div class="popBox1">
+                            <div class="title1">
+                                <p>제목</p>
+                            </div>
+                            <div class="pop-menu1">
+                                <div class="menu1">
+                                    <p>사진/그림</p>
+                                    <p>텍스트</p>
+                                </div>
+                            </div>
+                            <div class="pop-footer1">
+                                <div class="footer1">
+                                    <li>사진/그림1</li>
+                                    <li>사진/그림2</li>
+                                    <li>사진/그림3</li>
+                                    <li>사진/그림4</li>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
