Feat: nuribom-project1

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -31,11 +31,11 @@
                 <div class="oneBox">
                     <div class="close">
                         <label for="modal0">닫기</label>
-                        <div class="popBox1">
+                        <div class="pop-Box1">
                             <div class="title1">
                                 <p>제목</p>
                             </div>
-                            <div class="pop-menu1">
+                            <div class="menuBox1">
                                 <div class="menu1">
                                     <p>사진/그림</p>
                                     <p>텍스트</p>
@@ -57,6 +57,26 @@
                 <div class="twoBox">
                     <div class="close">
                         <label for="modal1">닫기</label>
+                        <div class="pop-Box2">
+                            <div class="title2">
+                                <p>제목</p>
+                            </div>
+                            <div class="menuBox2">
+                                <div class="menu2">
+
+                                </div>
+                            </div>
+                            <div class="pop-footer2">
+                                <div class="footer2">
+                                    <p>asdf</p>
+                                    <p>dadf</p>
+                                    <p>eas</p>
+                                    <p>yw</p>
+                                    <p>qwsdf</p>
+                                    <p>karjw</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 
