Feat: target_blank

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -81,11 +81,11 @@
                 </div>
                 
                 <div class="btn1">
-                    <button><a href="https://login.ecount.com/Login/">이카운트</a></button>
+                    <button><a href="https://login.ecount.com/Login/" target="_blank">이카운트</a></button>
                 </div>
 
                 <div class="btn2">
-                    <button><a href="http://law.nuribom.com/">법규 검색</a></button>
+                    <button><a href="http://law.nuribom.com/" target="_blank">법규 검색</a></button>
                 </div>
 
                 <label for="modal4" class="fiv">5번 버튼</label>
