--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">
-        <a href="http://www.nuribom.com/default/"><img src="images/logo.png" alt=""></a>
+        <a href="http://www.nuribom.com/default/" target="_blank"><img src="images/logo.png" alt=""></a>
         </div>
     </header>
     <div class="contetns">
