Feat: nuribom-project1

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -21,7 +21,8 @@
                 </svg>
                 </div>
                 <div class="headerBtn">
-                    <button>LOGIN</button>
+                    <input type="radio" id="modal2">
+                    <button><label for="modal2">LOGIN</label></button>
                     <button>REGISTER</button>
                     <button>LANGUAGE</button>
                 </div>
