Feat: nuribom-project1

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="headerBtn">
                     <input type="radio" id="modal2">
-                    <button><label for="modal2">LOGIN</label></button>
+                    <button><label for="modal2" id="modal2">LOGIN</label></button>
                     <button>REGISTER</button>
                     <button>LANGUAGE</button>
                 </div>
