Feat: nuribom-project1

--- a/test/index.html
+++ b/test/index.html
@@ -7,22 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="body">
-        <header>
-            <div class="logo">
-                <h1><a href="#">Logo</a></h1>
-            </div>
-            <nav>
-                <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                </ul>
-            </nav>
-            <div class="btn">
-                <button>로그인</button>
-                <button>회원가입</button>
-            </div>
-        </header>
+    <input type="checkbox" id="modal">
+    <div class="open">
+        <label for="modal">안녕</label>
     </div>
+        <div class="modalb">
+            <label for="modal">닫기</label>
+        </div>
 </body>
 </html>
