Feat: update-test-nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -79,12 +79,20 @@
                             </div>
                             <div class="pop-footer2">
                                 <div class="footer2">
-                                    <p>asdf</p>
-                                    <p>dadf</p>
-                                    <p>eas</p>
-                                    <p>yw</p>
-                                    <p>qwsdf</p>
-                                    <p>karjw</p>
+                                    <button><</button>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <li><a href="#">hi</a></li>
+                                    <button>></button>
                                 </div>
                             </div>
                         </div>
