--- a/test2/index.html
+++ b/test2/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Button Slide</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>test2</p>
-    <p>ㅎㅇ</p>
+
+<div class="container">
+  <button class="slideBtn" id="slideBtn1">Slide Right 1</button>
+  <button class="slideBtn" id="slideBtn2">Slide Right 2</button>
+  <button class="slideBtn" id="slideBtn3">Slide Right 3</button>
+</div>
+
+<script src="index.js"></script>
 </body>
 </html>
