Feat: nuribom-project

--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png">
     <title>누리봄 프로젝트</title>
+    <!-- <style></style> -->
 </head>
 <body>
     <header>
@@ -80,18 +81,23 @@
                             <div class="pop-footer2">
                                 <div class="footer2">
                                     <button><</button>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
-                                    <li><a href="#">hi</a></li>
+                                    <div class="window">
+                                        <div class="documents">
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                            <li><a href="#">hi</a></li>
+                                        </div>
+                                    </div>
                                     <button>></button>
                                 </div>
                             </div>
