Feat: nuribom-project

--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -23,6 +23,13 @@
                 <div class="headerBtn">
                     <input type="checkbox" id="modal2">
                     <button><label for="modal2" id="modal2">LOGIN</label></button>
+                    <div class="logb">
+                        <div class="lbox">
+                            <div class="logotext">
+                                <p>로그인</p>
+                            </div>
+                        </div>
+                    </div>
                     <button>REGISTER</button>
                     <button>LANGUAGE</button>
                 </div>
