--- a/nuribom/index.html
+++ b/nuribom/index.html
@@ -25,6 +25,7 @@
                     <button><label for="modal2" id="modal2">LOGIN</label></button>
                     <div class="logb">
                         <div class="lbox">
+                            <label for="modal2" class="close1">닫기</label>
                             <div class="logotext">
                                 <p>로그인</p>
                             </div>
