--- a/nuribom-WebProjcet/index.html
+++ b/nuribom-WebProjcet/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/logo.png">
-    <title>누리봄 프로젝트</title>
+    <title>누리봄</title>
     <!-- <style></style> -->
 </head>
 <body>
@@ -79,6 +79,7 @@
                                 </div>
                             </div>
                             <div class="pop-footer2">
+                                <button><</button>
                                 <div class="footer2">
                                     <div class="window">
                                         <div class="documents">
@@ -98,6 +99,7 @@
                                         </div>
                                     </div>
                                 </div>
+                                <button>></button>
                             </div>
                         </div>
                     </div>
